--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/kasnino/node-express-guide#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "handlebars": "^4.0.6"
+    "handlebars": "^4.0.6",
+    "jade": "^1.11.0"
   }
 }
